external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_positional_ctor.exp
error[E03013]: positional call mismatch
  ┌─ tests/development/enums/matching/invalid_positional_ctor.move:8:18
  │
4 │         E(u64)
  │         ------ Variant is defined here.
  ·
8 │         let _x = Entry::E;
  │                  ^^^^^^^^ Invalid variant instantiation. Non-empty variant instantiations require arguments
  │
  = Pass arguments to positional variants using '()'

error[E04016]: too few arguments
  ┌─ tests/development/enums/matching/invalid_positional_ctor.move:8:18
  │
8 │         let _x = Entry::E;
  │                  ^^^^^^^^ Missing argument for field '0' in '0x42::m::Entry::E'

error[E03013]: positional call mismatch
  ┌─ tests/development/enums/matching/invalid_positional_ctor.move:9:18
  │
4 │         E(u64)
  │         ------ Variant is defined here.
  ·
9 │         let _x = Entry::E { x: 32 };
  │                  ^^^^^^^^^^^^^^^^^^ Invalid variant instantiation. Positional variant fields require positional instantiations.

error[E04016]: too few arguments
  ┌─ tests/development/enums/matching/invalid_positional_ctor.move:9:18
  │
9 │         let _x = Entry::E { x: 32 };
  │                  ^^^^^^^^^^^^^^^^^^ Missing argument for field '0' in '0x42::m::Entry::E'

error[E03010]: unbound field
  ┌─ tests/development/enums/matching/invalid_positional_ctor.move:9:18
  │
9 │         let _x = Entry::E { x: 32 };
  │                  ^^^^^^^^^^^^^^^^^^ Unbound field 'x' in '0x42::m::Entry::E'

